# portfolio

./: Cargo.toml
database/json/: john-doe.json
src/: main.rs  model.rs  utils.rs
src/model/: background.rs  competence.rs  mod.rs  user.rs
src/routes/: user.rs
static/public/css/: main_style.css
static/public/css/bootstrap/: bootstrap.css
templates/: base.html.tera  home.html.tera  user_page.html.tera
templates/portfolio/: competences.html.tera  user_aside.html.tera  user_page.html.tera
templates/portfolio/add_form/: add_form.html.tera
templates/portfolio/user_page/: competences.html.tera  parcours.html.tera  user_page.html.tera
